--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.2"
+        "laravelcollective/html": "^6.2",
+        "phpmailer/phpmailer": "^6.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
