--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.2",
         "phpmailer/phpmailer": "^6.3",
         "snapappointments/bootstrap-select": "^1.13",
